# ogre-scripts-LSP

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  RELEASE.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
core/inc/: LspProtocol.h  LspServer.h  ast_tree.h  exceptions.h  formatter.h  goto.h  library.h  logs.h  lsp_protocol.h  lsp_server.h  parser.h  program_arg.h  scanner.h  semantic_tokens.h  symbols.h  token.h
core/src/: LspServer.cpp  formatter.cpp  goto.cpp  library.cpp  logs.cpp  lsp_server.cpp  parser.cpp  program_arg.cpp  scanner.cpp  semantic_tokens.cpp  symbols.cpp
doc/: AST_diagram.drawio
integration/: build.sh
src/: exceptions.h  formatter.h  goto.cpp  goto.h  lsp_protocol.h  lsp_server.cpp  lsp_server.h  symbols.cpp
src/lang/: ast_tree.h  params_validator.cpp  params_validator.h  parser.cpp  parser.h  scanner.cpp  scanner.h  token.h
src/lsp/: formatter.cpp  formatter.h  goto.cpp  goto.h  semantic_tokens.cpp  semantic_tokens.h  symbols.cpp  symbols.h
src/utils/: logs.cpp  program_arg.cpp  program_arg.h
tests/: CMakeLists.txt  ErrorHandlingParserTest.cpp  LSPDiagnosticsTest.cpp  LSPDocumentSymbolsTest.cpp  LSPFormattingTest.cpp  LSPGoToDefinitionTest.cpp  LSPInitializeTest.cpp  LSPProdErrorsReproductionTest.cpp  LSPSemanticTokensTest.cpp  LSPSyncNotificationsTest.cpp  LSPTest.cpp  ProgramOptionsTest.cpp  SimpleParserTest.cpp  SimpleScannerTest.cpp  Test.cpp  ValidParamsTest.cpp  utils.h
tests/examples/: add_two_numbers.js  example001.material  example002.material  frag_vert_declarations.material  full_test_material.material  matching_names.material
tests/examples/lsp/: error_example_from_prod.txt  error_example_from_prod2.txt  formatting_bad_tokens.material  formatting_programs.material  formatting_programs_basic.material  formatting_programs_tab_size_4_spaces.material  formatting_programs_with_endl.material  formatting_programs_with_tabs.material  formatting_programs_without_endl.material  goto_definition_material.material  goto_definition_program.material  goto_definition_rtshader.material  goto_definition_sampler.material  goto_definition_shadow_mat.material  goto_definition_shared_param.material  goto_definition_technique.material  goto_definition_texture_source.material
tests/examples/params/: valid_params_material_block.material  valid_params_pass_block.material  valid_params_sample_block.material  valid_params_technique_block.material  valid_params_texture_unit_block.material
tests/examples/parse/: frag_vert_declarations_with_errors.material
tests/examples/parser/: material_simple_example.material
tests/examples/scanner/: bad_tokens.material  frag_vert_declarations.material  simple_material.material  simple_token_validation.material
tests/examples/valid_examples/: example001.material  example002.material  example003.material  example005.material  example009.material
tests/utils/: utils.cpp  utils.h
